add victory threshold option
threshold defaults to 50%. script checks to make sure that the entered value is a number greater than 0 and less than 100.

also corrected a few typos.

--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,15 @@ nav.language ul {
 nav.language li {
     display: inline-block;
 }
+
+#thresholdbox {
+    width: 10rem;
+    float: right;
+    margin-left: 1rem;
+}
+
+#thresholdcontainer {
+    display: flex;
+    align-items: center;
+    font-weight: normal;
+}
